fixingOffcanvasShowStuck

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -27,7 +27,7 @@
 .navbar-nav a
 {
     font-size: 20px;
-    padding: 6px 0px;
+    padding: 6px 5px;
     border-radius: 45px;
     color: rgb(76, 76, 223);
     transition: all 0.5s;
@@ -46,7 +46,7 @@
     background-color: snow;
     color: rgb(76, 76, 223);
     transition: all 0.5s;
-    padding: 0;
+    padding: 0px 5px;
 }
 .navbar-nav .fonts:hover
 {
